# TASTET

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/build-docs/: SKILL.md
.claude/skills/verify-examples/: SKILL.md
docs/: Makefile  conf.py  getting-started.rst  index.rst
docs/api/: cka.rst  distance.rst  index.rst  kernel.rst  kpca.rst  metrics.rst  pipeline.rst  plotting.rst  selection.rst  soap.rst  sweep.rst
docs/use-cases/: index.rst  nanoclusters.rst  pablo.rst  rh_complex.rst
examples/nanoclusters/: config.py  prepare.py  run.py
examples/nanoclusters/analysis/: energy_profile.py  plot_cka_heatmaps.py  plot_run_energy_profile.py  plot_subsample_distribution.py
examples/nanoclusters/input/: energies_selected.csv  split_trajectory.py
examples/rh_complex/: config.py  prepare.py  round2.py  run.py
examples/rh_complex/analysis/: analyze_gridsearch.py  plot_cka_heatmaps.py  plot_energy_kpca.py  plot_rmsd_histogram.py  plot_round2_energy_kpca.py
examples/rh_complex/input/: energies_round1.csv  energies_round2.csv
examples/rh_complex/round2/: __init__.py  _common.py  reoptimise.py  reselect.py
sads/: cka.py  distance.py  io.py  kernel.py  kpca.py  pipeline.py  plot_style.py  plotting.py  selection.py  soap_utils.py
sads/metrics/: __init__.py  cka.py  dissimilarity.py
sads/plotting/: __init__.py  _panel.py  distance.py  heatmap.py  kpca.py  style.py
sads/sweep/: __init__.py  engine.py  results.py
tastet/: __init__.py  cka.py  distance.py  io.py  kernel.py  kpca.py  pipeline.py  selection.py  soap_utils.py
tastet/metrics/: __init__.py  cka.py
tastet/plotting/: __init__.py  _panel.py  ase_gui.py  distance.py  heatmap.py  kpca.py  style.py
tastet/sweep/: __init__.py  engine.py  multichannel.py  results.py
