[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sads"
version = "0.1.0.dev1"
description = "Selection by Atomic Density Similarity"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Alejandro Cañete-Arché" }
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "ase",
    "dscribe",
    "scikit-learn",
    "tqdm",
    "kmedoids",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]
examples = [
    "rdkit",
]

[tool.setuptools.packages.find]
include = ["sads*"]