[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tastet"
version = "0.1.0.dev1"
description = "Tool for Atomistic Structure selection Through Efficient Triage"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Alejandro Cañete-Arché" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "ase",
    "dscribe",
    "scikit-learn",
    "tqdm",
    "kmedoids",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]
examples = [
    "rdkit",
]

[project.urls]
Homepage = "https://github.com/CCEMGroupTCD/TASTET"
Issues = "https://github.com/CCEMGroupTCD/TASTET/issues"

[tool.setuptools.packages.find]
include = ["tastet*"]